# sakura-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/BinOutput/Avatar/: ConfigAvatar_Albedo  ConfigAvatar_Alhatham  ConfigAvatar_Aloy  ConfigAvatar_Ambor  ConfigAvatar_Arlecchino  ConfigAvatar_Ayaka  ConfigAvatar_Ayato  ConfigAvatar_Baizhuer  ConfigAvatar_Barbara  ConfigAvatar_Beidou  ConfigAvatar_Bennett  ConfigAvatar_Candace  ConfigAvatar_Charlotte  ConfigAvatar_Chasca  ConfigAvatar_Chevreuse  ConfigAvatar_Chiori  ConfigAvatar_Chongyun  ConfigAvatar_Citlali  ConfigAvatar_Clorinde  ConfigAvatar_Collei  ConfigAvatar_Cyno  ConfigAvatar_Dehya  ConfigAvatar_Diluc  ConfigAvatar_Diona  ConfigAvatar_Dori  ConfigAvatar_Emilie  ConfigAvatar_Eula  ConfigAvatar_Faruzan  ConfigAvatar_Feiyan  ConfigAvatar_Fischl  ConfigAvatar_Freminet  ConfigAvatar_Furina  ConfigAvatar_Gaming  ConfigAvatar_Ganyu  ConfigAvatar_Gorou  ConfigAvatar_Heizo  ConfigAvatar_Hutao  ConfigAvatar_Itto  ConfigAvatar_Kachina  ConfigAvatar_Kaeya  (+52 more)
assets/ExcelBinOutput/: AvatarCostumeExcelConfigData  AvatarExcelConfigData  AvatarFlycloakExcelConfigData  AvatarPromoteExcelConfigData  AvatarSkillDepotExcelConfigData  AvatarTraceEffectExcelConfigData  GadgetCurveExcelConfigData  MapAreaConfigData  MonsterCurveExcelConfigData  MonsterExcelConfigData  OpenStateConfigData  WeaponCurveExcelConfigData  WeaponExcelConfigData
assets/region/: client_custom_config.json  encryption_config.json  region_list.json
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logging.rs  string_util.rs  toml_util.rs
crates/dispatch-server/: Cargo.toml  dispatch-server.default.toml
crates/dispatch-server/src/: config.rs  handlers.rs  main.rs
crates/game-server/: Cargo.toml  game-server.default.toml
crates/game-server-core/: Cargo.toml
crates/game-server-core/src/: command.rs  lib.rs  player_data_sync.rs  player_world.rs  simulator.rs
crates/game-server/src/: config.rs  db_worker.rs  main.rs  message_handler.rs  player_info_util.rs
crates/gate-server/: Cargo.toml  gate-server.default.toml
crates/gate-server/kcp/: Cargo.toml
crates/gate-server/kcp/src/: kcp.rs  lib.rs
crates/gate-server/src/: config.rs  main.rs  util.rs
crates/gate-server/src/handler/: get_player_token.rs  mod.rs  protocol_util.rs  server_message_handler.rs
crates/gate-server/src/net/: control_packet.rs  kcp_connection.rs  mod.rs  udp_server.rs
crates/mavuika-avatar/: Cargo.toml
crates/mavuika-avatar/src/: appearance.rs  equip.rs
crates/mavuika-combat/: Cargo.toml
crates/mavuika-combat/src/: fight.rs  lib.rs  movement.rs
crates/mavuika-command/: Cargo.toml
crates/mavuika-command/src/: lib.rs  util.rs
crates/mavuika-data/: Cargo.toml
crates/mavuika-data/mavuika-data-derive/: Cargo.toml
crates/mavuika-data/src/: lib.rs  prop_type.rs
crates/mavuika-database/: Cargo.toml
crates/mavuika-database/migrations/: 001_tables.sql
crates/mavuika-database/src/: lib.rs  util.rs
crates/mavuika-encryption/: Cargo.toml
crates/mavuika-encryption/src/: lib.rs  rsa.rs  xor.rs
crates/mavuika-entity/: Cargo.toml
crates/mavuika-entity/src/: ability.rs  avatar.rs  common.rs  lib.rs  monster.rs  play_team.rs  transform.rs  util.rs  weapon.rs
crates/mavuika-environment/: Cargo.toml
crates/mavuika-environment/src/: chair.rs
crates/mavuika-inventory/: Cargo.toml
crates/mavuika-inventory/src/: equip.rs  lib.rs
crates/mavuika-luashell/: Cargo.toml
crates/mavuika-luashell/src/: lib.rs
crates/mavuika-map/: Cargo.toml
crates/mavuika-map/src/: lib.rs  mark.rs
crates/mavuika-message/: Cargo.toml
crates/mavuika-message/src/: event.rs  lib.rs  output.rs
crates/mavuika-network/: Cargo.toml
crates/mavuika-network/src/: lib.rs  listener.rs
crates/mavuika-pathfinding/: Cargo.toml
crates/mavuika-pathfinding/src/: lib.rs
crates/mavuika-persistence/: Cargo.toml
crates/mavuika-persistence/src/: lib.rs  player_information.rs
crates/mavuika-proto/: Cargo.toml
crates/mavuika-scene/: Cargo.toml
crates/mavuika-scene/src/: lib.rs  player_join_team.rs  player_jump.rs  scene_team_update.rs  sync_enter_info.rs
crates/mavuika-scene/src/avatar/: mod.rs
crates/mavuika-scene/src/enter/: enter_scene_done.rs  enter_scene_ready.rs  mod.rs  post_enter_scene.rs  scene_init_finish.rs
crates/mavuika-time/: Cargo.toml
crates/mavuika-time/src/: lib.rs
crates/sakura-avatar/: Cargo.toml
crates/sakura-avatar/src/: lib.rs  (+2 more)
crates/sakura-combat/: Cargo.toml
crates/sakura-combat/src/: fight.rs  lib.rs  movement.rs
crates/sakura-command/: Cargo.toml
crates/sakura-command/src/: lib.rs  util.rs
crates/sakura-data/: Cargo.toml
crates/sakura-database/: Cargo.toml
crates/sakura-encryption/: Cargo.toml
crates/sakura-entity/: Cargo.toml
crates/sakura-entity/src/: ability.rs  avatar.rs  common.rs  lib.rs  monster.rs  mp_level.rs  team.rs  transform.rs  util.rs
crates/sakura-environment/: Cargo.toml
crates/sakura-inventory/: Cargo.toml
crates/sakura-inventory/src/: equip.rs
crates/sakura-luashell/: Cargo.toml
crates/sakura-map/: Cargo.toml
crates/sakura-map/src/: lib.rs  mark.rs
crates/sakura-message/: Cargo.toml
crates/sakura-network/: Cargo.toml
crates/sakura-pathfinding/: Cargo.toml
crates/sakura-persistence/: Cargo.toml
crates/sakura-proto/: Cargo.toml
crates/sakura-proto/sakura-proto-derive/: Cargo.toml
crates/sakura-proto/sakura-proto-derive/src/: lib.rs
crates/sakura-proto/src/: lib.rs  packet.rs  raw_packet.rs
crates/sakura-scene/: Cargo.toml
crates/sakura-scene/src/: common.rs  lib.rs  player_join_team.rs  player_jump.rs  scene_team_update.rs  sync_enter_info.rs
crates/sakura-scene/src/avatar/: mod.rs
crates/sakura-scene/src/enter/: enter_scene_done.rs  enter_scene_ready.rs  mod.rs  post_enter_scene.rs  scene_init_finish.rs
crates/sakura-time/: Cargo.toml
crates/sakura-time/src/: lib.rs
crates/sdk-server/: Cargo.toml  sdk-server.default.toml
crates/sdk-server/src/: config.rs  main.rs  util.rs
crates/sdk-server/src/handlers/: combo_granter.rs  mdk_shield_api.rs  register.rs  risky_api.rs
(+59 files in other folders)
