[package]
name = "game-server-core"
edition = "2021"
version.workspace = true

[dependencies]
tokio.workspace = true

# Logic
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error processing
thiserror.workspace = true

# Logging
tracing.workspace = true

# Internal
common.workspace = true
mavuika-entity.workspace = true
mavuika-scene.workspace = true
mavuika-avatar.workspace = true
mavuika-environment.workspace = true
mavuika-pathfinding.workspace = true
mavuika-combat.workspace = true
mavuika-time.workspace = true
mavuika-command.workspace = true
mavuika-map.workspace = true
mavuika-inventory.workspace = true
mavuika-message.workspace = true
mavuika-persistence.workspace = true
mavuika-luashell.workspace = true
mavuika-data.workspace = true
mavuika-proto.workspace = true
