[package]
name = "mavuika-game-server"
edition = "2021"
version.workspace = true

[dependencies]
# Runtime
tokio.workspace = true

# Logic
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true

# Error processing
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Util
hex.workspace = true
byteorder.workspace = true
dashmap.workspace = true
rand.workspace = true
paste.workspace = true

# Internal
common.workspace = true
game-server-core.workspace = true
mavuika-database.workspace = true
mavuika-message.workspace = true
mavuika-persistence.workspace = true
mavuika-data.workspace = true
mavuika-network.workspace = true
mavuika-proto.workspace = true
