[package]
name = "sakura-gate-server"
edition = "2021"
version.workspace = true

[dependencies]
# Framework
tokio.workspace = true

# Network
kcp = { path = "kcp", features = ["tokio"] }

# Error processing
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Util
byteorder.workspace = true
rand.workspace = true
hex.workspace = true
rbase64.workspace = true
dashmap.workspace = true

# Internal
common.workspace = true
sakura-database.workspace = true
sakura-network.workspace = true
sakura-encryption.workspace = true
sakura-proto.workspace = true
