[package]
name = "mavuika-inventory"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true

mavuika-data.workspace = true
mavuika-entity.workspace = true
mavuika-persistence.workspace = true
mavuika-message.workspace = true
mavuika-proto.workspace = true
