[package]
name = "mavuika-scene"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true

rand.workspace = true
paste.workspace = true
tracing.workspace = true

common.workspace = true
mavuika-data.workspace = true
mavuika-entity.workspace = true
mavuika-message.workspace = true
mavuika-persistence.workspace = true
mavuika-proto.workspace = true
