[package]
name = "sakura-entity"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true
tracing.workspace = true

common.workspace = true
sakura-data.workspace = true
sakura-persistence.workspace = true
sakura-message.workspace = true
sakura-proto.workspace = true
