[package]
name = "sakura-inventory"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true

sakura-data.workspace = true
sakura-entity.workspace = true
sakura-persistence.workspace = true
sakura-message.workspace = true
sakura-proto.workspace = true
