[package]
name = "sakura-proto"
edition = "2021"
build = "build/main.rs"
version.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
byteorder.workspace = true
thiserror.workspace = true
num_enum.workspace = true
hex.workspace = true
sakura-proto-derive = { path = "sakura-proto-derive" }

[build-dependencies]
prost-build.workspace = true
syn = "2.0.79"
quote = "1.0.37"
prettyplease = "0.2.22"
