[package]
name = "sakura-time"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true

common.workspace = true
sakura-proto.workspace = true
sakura-scene.workspace = true
sakura-message.workspace = true
sakura-persistence.workspace = true
