[package]
name = "mavuika-sdk-server"
edition = "2021"
version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true

rsa.workspace = true

anyhow.workspace = true
thiserror.workspace = true

serde.workspace = true
serde_json.workspace = true
rbase64.workspace = true

tracing.workspace = true

common.workspace = true
mavuika-database.workspace = true
